fix preview scrollbar align; add icons

--- a/src/app.scss
+++ b/src/app.scss
@@ -1,5 +1,7 @@
 .app{
     height: 100vh;
+    background-color: #f6f6f6;
+
 
     .section{
         height: calc(100vh - 70px);
