--- a/src/components/Preview/preview.scss
+++ b/src/components/Preview/preview.scss
@@ -7,20 +7,30 @@
     border-radius: 10px;
     max-height: 80vh;
     margin: 20px 40px;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 
 
     .top{
         overflow: hidden;
         background-color: #808080;
         width: 100%;
-        text-align: center;
         height: 40px;
         display: flex;
         justify-content: center;
         align-items: center;
+        font-weight: 600;
+        font-size: 15px;
+
+        i{
+            font-size: 25px;
+            margin-right: 7px;
+        }
     }
 
     .textBox{
+        width: 100%;
+        height: auto;
+
         
 
         pre {
