--- a/src/components/Topbar/topbar.scss
+++ b/src/components/Topbar/topbar.scss
@@ -2,8 +2,8 @@
     display: flex;
     align-items: center;
     overflow: hidden;
-    background-color: black;
-    color: white;
+    background-color: #303030;
+    color: #f6f6f6;
     width: 100%;
     height: 70px;
     position: fixed;
